--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,7 @@
 .about__container {
   position: relative;
-  height: 953px;
+  max-height: 953px;
+  height: 100%;
   margin-bottom: 100px;
 }
 
@@ -15,7 +16,6 @@
     'pic content content';
   row-gap: 80px;
   column-gap: 70px;
-  height: 953px;
 }
 
 .about__container__title {
@@ -128,9 +128,47 @@
   width: 336px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1320px) {
   .about__container {
-    height: 1235px;
+    max-height: 1200px;
+    height: 100%;
+  }
+
+  .about__container--layout {
+    position: relative;
+    display: grid;
+    grid-template-columns: 321px 336px;
+    grid-template-rows: 100px 140px 320px 380px;
+    grid-template-areas:
+      'title .'
+      'description .'
+      'content content'
+      'content content';
+    row-gap: 80px;
+    column-gap: 70px;
+  }
+
+  .about__container__content {
+    position: relative;
+    display: grid;
+    grid-area: content;
+    grid-template-columns: 321px 336px;
+    grid-template-rows: 290px 411px;
+    grid-template-areas:
+      'item-1 item-2'
+      'item-3 item-4';
+    gap: 70px;
+  }
+
+  .about__container__main-pic {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .about__container {
+    max-height: 1500px;
+    height: 100%;
     padding-top: 0;
     margin-bottom: 40px;
   }
@@ -151,7 +189,8 @@
   .about__container__content {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 30px;
+    align-items: center;
   }
 
   .about__container__title__description--layout {
@@ -194,5 +233,16 @@
 
   .about__container__content__item.item-3 .about__container__content__item__title {
     width: 287px;
+  }
+}
+
+@media (max-width: 375px) {
+  .about__container {
+    max-height: 1235px;
+  }
+
+  .about__container__content {
+    gap: 60px;
+    align-items: flex-start;
   }
 }
