--- a/css/cta.css
+++ b/css/cta.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   padding: 0 60px;
-  height: 485px;
+  max-height: 485px;
+  height: 100%;
 }
 
 .cta__container--wrapper {
@@ -21,6 +22,17 @@
   color: #000;
 }
 
+@media (max-width: 820px) {
+  .cta__container h2 {
+    font-size: 40px;
+  }
+
+  .cta__container__title {
+    margin-bottom: 39px;
+    text-align: center;
+  }
+}
+
 @media (max-width: 375px) {
   .cta__container {
     padding: 0 16px;
@@ -30,11 +42,6 @@
   .cta__container--wrapper {
     padding: 39px 19px 38px;
     margin: 40px 0;
-  }
-
-  .cta__container__title {
-    margin-bottom: 39px;
-    text-align: center;
   }
 
   .cta__container__btn {
