--- a/css/footer.css
+++ b/css/footer.css
@@ -9,20 +9,23 @@
 
 .footer__container__main-block {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   height: 57px;
   margin-bottom: 28px;
+  gap: 20px;
 }
 
 .footer__container__main-block__logo {
-  max-width: 155px;
+  width: 155px;
   height: 57px;
 }
 
 .footer__container__main-block__logo--img {
-  width: 100%;
-  height: 100%;
+  max-width: 155px;
+  width: 155px;
+  max-height: 57px;
+  height: 57px;
 }
 
 .footer__container__main-block__links--layout {
@@ -33,7 +36,6 @@
 
 .footer__container__main-block__links {
   display: flex;
-  margin: 0 126px;
   gap: 40px;
 }
 
@@ -50,11 +52,15 @@
   display: none;
 }
 
+.footer__container__main-block__btns {
+  display: inline-flex;
+}
+
 .footer__container__main-block__btn {
   margin-right: 40px;
 }
 
-.footer__container__main-block__download-app-buttons {
+.footer__container__main-block__btns__download-app-btns {
   display: flex;
   align-self: flex-end;
   gap: 20px;
@@ -98,7 +104,32 @@
   text-decoration: underline;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1230px) {
+  .footer__container__main-block {
+    flex-wrap: wrap;
+    margin-bottom: 100px;
+  }
+}
+
+@media (max-width: 900px) {
+  .footer__container__lower-block {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 750px) {
+  .footer__container__main-block__btns {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .footer__container__main-block {
+    margin-bottom: 170px;
+  }
+}
+
+@media (max-width: 590px) {
   .footer__container {
     padding: 20px 16px;
   }
@@ -107,27 +138,33 @@
     justify-content: flex-start;
     flex-direction: column;
     align-items: flex-start;
+    flex-wrap: nowrap;
     height: 537px;
+    gap: 40px;
     margin-bottom: 40px;
   }
 
   .footer__container__main-block__logo {
-    max-width: 124px;
+    width: 124px;
     height: 39px;
-    margin-bottom: 40px;
+  }
+
+  .footer__container__main-block__logo--img {
+    max-width: 124px;
+    width: 124px;
+    max-height: 39px;
+    height: 39px;
   }
 
   .footer__container__main-block__links--layout {
     display: inline;
     text-align: start;
     justify-content: flex-start;
-    margin-bottom: 40px;
   }
 
   .footer__container__main-block__links {
     justify-content: flex-start;
     flex-direction: column;
-    margin: 0;
     gap: 16px;
   }
 
@@ -144,24 +181,29 @@
     gap: 16px;
   }
 
+  .footer__container__main-block__btns {
+    display: block;
+  }
+
   .footer__container__main-block__btn {
     margin: 0 0 40px 0;
   }
 
-  .footer__container__main-block__download-app-buttons {
+  .footer__container__main-block__btns__download-app-btns {
     align-self: flex-start;
     display: flex;
     flex-direction: column;
   }
 
   .footer__container__block-separator {
-    max-width: 343px;
+    max-width: 100vw;
     margin-bottom: 10px;
   }
 
   .footer__container__lower-block {
     display: flex;
     justify-content: flex-start;
+    flex-wrap: nowrap;
     line-height: 150%;
   }
 
