--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,5 @@
 .form__field {
+  position: relative;
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
@@ -17,11 +18,15 @@
   color: #ec1211;
 }
 
+form__field__title--required {
+  color: #ec1211;
+}
+
 .form__field__title__status.required {
   display: contents;
 }
 
-.form__field__content--wrapper {
+.form__field__content__input {
   display: flex;
   width: 100%;
   height: 40px;
@@ -31,12 +36,6 @@
   font-weight: 500;
   border: 1px solid #f1f1f1;
   border-radius: 14px;
-}
-
-.form__field__content__input {
-  width: 100%;
-  font-weight: 400;
-  line-height: 20px;
   overflow: hidden;
   color: #070707;
   text-overflow: ellipsis;
@@ -55,16 +54,34 @@
   display: block;
 }
 
-.form__field__content__status.error {
+.form__field__content__status .error {
   display: block;
 }
 
 .form__field__content__flag {
+  position: absolute;
+  top: 38px;
+  left: 16px;
   margin-right: 10px;
 }
 
+#phone {
+  padding-left: 47px;
+}
+
 .form__field__content__input::placeholder {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
   color: #a7a7a7;
+}
+
+.form__field__content__input:required {
+  border: 1px solid #ec1211;
+}
+
+.form__field__content__input:invalid {
+  border: 1px solid #ec1211;
 }
 
 .form__field__title.disabled {
@@ -75,14 +92,14 @@
   color: #a7a7a7;
 }
 
-.form__field__content--wrapper:focus-within {
+.form__field__content__input:focus {
   border: 1px solid #070707;
 }
 
-.form__field__content--wrapper.required {
+.form__field__content__input.required {
   border: 1px solid #ec1211;
 }
 
-.form__field__content--wrapper.error {
+.form__field__content__input.error {
   border: 1px solid #ec1211;
 }
