--- a/css/hero.css
+++ b/css/hero.css
@@ -1,7 +1,3 @@
-.container.hero__container {
-  max-width: 1440px;
-}
-
 .hero__container {
   display: flex;
   justify-content: space-between;
@@ -28,18 +24,77 @@
 
 .hero__container__pic {
   position: relative;
-  align-self: flex-end;
+  bottom: 20px;
   width: 595px;
   height: 529px;
+  object-fit: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-image: url(/assets/hero/hero-picture-desktop.png);
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1200px) {
+  .hero__container {
+    padding: 52px 0 0 40px;
+  }
+
+  .hero__container h1 {
+    font-size: 60px;
+  }
+
+  .hero__container h2 {
+    font-size: 40px;
+  }
+
+  .hero__container h3 {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 830px) {
+  .hero__container {
+    flex-direction: column;
+    height: 600px;
+    margin-bottom: 50px;
+    gap: 30px;
+  }
+
+  .hero__container h1 {
+    font-size: 60px;
+  }
+
+  .hero__container h2 {
+    font-size: 40px;
+  }
+
+  .hero__container h3 {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 106%;
+  }
+}
+
+@media (max-width: 470px) {
+  .hero__container h1 {
+    font-size: 40px;
+  }
+
+  .hero__container h2 {
+    font-size: 40px;
+  }
+
+  .hero__container h3 {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 106%;
+  }
+
   .hero__container {
     flex-direction: column;
     height: 708px;
     margin-bottom: 40px;
     padding: 51px 0 0 16px;
+    gap: 0;
   }
 
   .hero__container__title--layout {
@@ -61,6 +116,7 @@
   .hero__container__pic {
     position: absolute;
     top: 545px;
+    align-self: flex-end;
     width: 325px;
     height: 271px;
     background-image: url(/assets/hero/hero-picture-mobile.png);
