--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ html {
 }
 
 body {
+  width: 100vw;
   min-width: 375px;
   font-family: Outfit;
   font-size: 20px;
@@ -137,6 +138,7 @@ h3 {
 
 .container {
   max-width: 1440px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 60px;
   border: 0;
