--- a/css/why-budss.css
+++ b/css/why-budss.css
@@ -47,12 +47,6 @@
   gap: 20px;
 }
 
-.why-budss__container__content__cards.first-row {
-}
-
-.why-budss__container__content__cards.second-row {
-}
-
 .why-budss__container__content__card--wrapper {
   position: relative;
   display: flex;
@@ -75,9 +69,6 @@
 
 .why-budss__container__content__card--wrapper.card-03 {
   width: 547px;
-}
-
-.why-budss__container__content__card--wrapper.card-04 {
 }
 
 .why-budss__container__content__card__text--layout {
@@ -111,9 +102,6 @@
 
 .card-01 .why-budss__container__content__card__title {
   max-width: 100%;
-}
-
-.card-02 .why-budss__container__content__card__title {
 }
 
 .card-03 .why-budss__container__content__card__title {
@@ -196,7 +184,34 @@
   background-image: url(/assets/whyBuds/card4.svg);
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1360px) {
+  .why-budss__container__content__cards {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 820px) {
+  .why-budss__container__title__bg-pic {
+    display: none;
+  }
+}
+
+@media (max-width: 760px) {
+  .why-budss__container h1 {
+    font-size: 40px;
+  }
+
+  .why-budss__container h2 {
+    font-size: 40px;
+  }
+
+  .why-budss__container h3 {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 106%;
+  }
+
   .why-budss__container {
     margin-bottom: 40px;
     padding: 40px 16px;
@@ -219,16 +234,12 @@
   }
 
   .why-budss__container__title__bg-pic {
+    display: block;
     left: 110px;
     top: 93px;
     width: 244px;
     height: 29px;
     background-image: url(/assets/whyBuds/rectangle-mobile.svg);
-  }
-
-  .why-budss__container__content__cards {
-    flex-direction: column;
-    align-items: center;
   }
 
   .why-budss__container__content__cards.first-row {
