--- a/css/btn.css
+++ b/css/btn.css
@@ -10,7 +10,7 @@
   text-wrap: nowrap;
   border-radius: 16px;
   user-select: none;
-  transition: transform 0.3s ease-out, background-color 0.3s ease-out;
+  transition: transform 0.2s ease-out, background-color 0.2s ease-out;
   will-change: transform;
 }
 
@@ -26,11 +26,11 @@
   transform: scale(1.05);
 }
 
-.main-btn--light-bg:focus {
-  padding: 12px 26px;
-  border: 4px solid #ba8bf3;
-  pointer-events: none;
-}
+/* .main-btn--light-bg:focus {
+    padding: 12px 26px;
+    border: 4px solid #ba8bf3;
+    pointer-events: none;
+  } */
 
 .main-btn--light-bg:active {
   padding: 16px 30px;
@@ -56,12 +56,12 @@
   transform: scale(1.05);
 }
 
-.main-btn--dark-bg:focus {
+/* .main-btn--dark-bg:focus {
   outline: 2px solid rgba(149, 76, 237, 0.2);
   outline-offset: -4px;
   background-color: transparent;
   pointer-events: none;
-}
+} */
 
 .main-btn--dark-bg:active {
   border-color: #a64ced;
