--- a/css/cookies-modal.css
+++ b/css/cookies-modal.css
@@ -1,13 +1,20 @@
-.container.cookies-modal__container {
+.cookies-modal.visible {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  z-index: 4;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .cookies-modal__container {
-  /* position: absolute;
-  left: 50%; */
-  display: flex;
-  height: 700px;
-  /* padding: 553px 65px 30px 90px; */
-  /* transform: translateX(-50%); */
+  position: absolute;
+  top: 553px;
+  padding-left: 90px;
 }
 
 .cookies-modal__container--wrapper {
@@ -22,6 +29,19 @@
   background-color: #fff;
   border-radius: 16px;
   box-shadow: -10px -5px 30px 0px rgba(141, 141, 141, 0.1);
+  transform: translateY(1000%);
+  transition: transform 0.2s ease;
+}
+
+.cookies-modal__container--wrapper.visible {
+  display: flex;
+  justify-content: center;
+  transform: translateY(0);
+  transition: transform 0.2s ease;
+}
+
+.cookies-modal__container--wrapper.invisible {
+  display: none;
 }
 
 .cookies-modal__container__text {
@@ -55,11 +75,11 @@
   transform: scale(1.05);
 }
 
-.cookies-modal__container__btns .cookies-modal__container__btn--decline.main-btn--light-bg:focus {
+/* .cookies-modal__container__btns .cookies-modal__container__btn--decline.main-btn--light-bg:focus {
   padding: 12px 26px;
   border: 4px solid #ba8bf3;
   pointer-events: none;
-}
+} */
 
 .cookies-modal__container__btns .cookies-modal__container__btn--decline.main-btn--light-bg:active {
   padding: 14px 28px;
@@ -78,16 +98,25 @@
 }
 
 @media (max-width: 1040px) {
+  .cookies-modal__container {
+    left: 0;
+    top: 400px;
+  }
+
   .cookies-modal__container--wrapper {
     flex-direction: column;
     gap: 20px;
   }
+
+  .cookies-modal__container__text {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
-@media (max-width: 460px) {
-  .cookies-modal__container {
-    height: 817px;
-    padding: 392px 20px 20px;
+@media (max-width: 600px) {
+  .container.cookies-modal__container {
+    padding: 0 20px;
   }
 
   .cookies-modal__container--wrapper {
@@ -124,5 +153,13 @@
 
   .mobile-vision {
     display: block;
+  }
+}
+
+@media (max-width: 455px) {
+  .cookies-modal__container {
+    left: 0;
+    top: 395px;
+    justify-content: center;
   }
 }
