--- a/css/cta-modal.css
+++ b/css/cta-modal.css
@@ -1,14 +1,30 @@
+.cta-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 3;
+}
+
+.cta-modal.visible {
+  display: flex;
+  justify-content: center;
+}
+
 .container.cta-modal__container {
   padding: 0;
 }
 
 .cta-modal__container {
-  height: 821px;
-  /* padding: 56px 511px 57px 512px; */
-  background: rgba(0, 0, 0, 0.2);
-  /* position: absolute;
-  left: 50%; */
-  /* transform: translateX(-50%); */
+  position: absolute;
+  top: 56px;
+  max-height: 817px;
+  display: flex;
+  justify-content: center;
 }
 
 .cta-modal__container--wrapper {
@@ -68,8 +84,11 @@
 
 @media (max-width: 460px) {
   .cta-modal__container {
-    height: 817px;
+    position: relative;
+    top: 0;
+    max-height: 817px;
     padding: 135px 20px;
+    align-items: center;
   }
 
   .cta-modal__container--wrapper {
