--- a/css/cookies-modal.css
+++ b/css/cookies-modal.css
@@ -29,7 +29,7 @@
   background-color: #fff;
   border-radius: 16px;
   box-shadow: -10px -5px 30px 0px rgba(141, 141, 141, 0.1);
-  transform: translateY(1000%);
+  transform: translateY(2000px);
   transition: transform 0.2s ease;
 }
 
